KRX의 종목이름과 DART의 종목이름 중에서 다른 것이 존재 대략 200개 가량 직접 수정해야 할듯